logs/pybili.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/emoji-list'...
Listing './lib/python3.5/site-packages/emoji_list'...
Listing './lib/python3.5/site-packages/emoji_list-0.50.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Listing './lib/python3.5/site-packages/pika-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybili'...
Compiling './lib/python3.5/site-packages/pybili/AutoDianGeJi.py'...
***   File "./lib/python3.5/site-packages/pybili/AutoDianGeJi.py", line 46
    print 'start db...'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/DanMuJi.py'...
***   File "./lib/python3.5/site-packages/pybili/DanMuJi.py", line 24
    print '----------------------------'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/DianGeJi.py'...
***   File "./lib/python3.5/site-packages/pybili/DianGeJi.py", line 27
    print '初始化...'
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/GUI.py'...
***   File "./lib/python3.5/site-packages/pybili/GUI.py", line 55
    print 'width:', c.w, 'height', c.h
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/bili.py'...
***   File "./lib/python3.5/site-packages/pybili/bili.py", line 58
    print '-' * len(s)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybili/bili_config.py'...
***   File "./lib/python3.5/site-packages/pybili/bili_config.py", line 73
    print 'updating config...'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/bili_sender.py'...
***   File "./lib/python3.5/site-packages/pybili/bili_sender.py", line 177
    print 'init ocr function...'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/handlers.py'...
***   File "./lib/python3.5/site-packages/pybili/handlers.py", line 22
    print 'start RabbitMQ publisher...'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/load_captcha.py'...
***   File "./lib/python3.5/site-packages/pybili/load_captcha.py", line 16
    print load()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybili/mi.py'...
***   File "./lib/python3.5/site-packages/pybili/mi.py", line 34
    if raw['code'] != 0: print raw['msg']
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/ocr.py'...
***   File "./lib/python3.5/site-packages/pybili/ocr.py", line 29
    print 'download ocr data...'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybili/training.py'...
***   File "./lib/python3.5/site-packages/pybili/training.py", line 24
    print train()
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybili-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
